Some Node.js trys and hold button visibility fixes

--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,12 @@ h2{
 #DealerPoints{
 
   text-align: center;
-  font-size: 50px;
+  font-size: 30px;
 }
 
 #Info{
   text-align: center;
-  font-size: 80px;
+  font-size: 50px;
   color: red;
 }
 
